--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@ services:
     image: onlyoffice/mailserver:latest
     depends_on:
      - onlyoffice-mysql-server
-    hostname: ${MAIL_SERVER_HOSTNAME}
+    hostname: olinux.tk
     environment:
        - MYSQL_SERVER=onlyoffice-mysql-server
        - MYSQL_SERVER_PORT=3306
